# gneiss-totesys

./: .gitignore  Makefile  README.md  delete_bucket_contents.py  playground.txt  pyproject.toml  requirements.txt  response.json  test_json_vonverter_db.sql
.github/workflows/: test_deploy.yml
aws_assets/: pg8000_layer.zip:Zone.Identifier
data_ingestion/: Makefile  README.md  pyproject.toml  requirements_dev.txt
data_ingestion/src/ingestion/: db_credentials.py  get_timestamp.py  ingestion.py  last_ingestion_timestamp.py  pg8000_conn.py  queries.py  rows_to_json.py  write_JSON.py
data_ingestion/src/main/: main.py
data_ingestion/test/ingestion/: ingestion_test.py  test_db_connection.py  test_db_credentials.py  test_get_timestamp.py  test_ingestion.py  test_last_ingestion_timestamp.py  test_pg8000_conn.py  test_queries.py  test_rows_to_json.py  test_rows_to_json.sql  test_write_to_ingestion.py
data_ingestion/test/main/: main_test.py
data_ingestion/test/sql/: totesys.sql
documentation/: data_relationships.md  json_format.md  s3_bucket_access_from_lambda.md  secrets.md  terraform_secrets.md
ingestion/: ingestion.py  rows_to_json.py
ingestion_function/: write_JSON.py
json_to_parquet/: date_dimension.py  dim_currency.py  get_s3_file.py  json_to_parquet.py  write_pq_to_s3.py
parquet_to_sql/test/: test_get_s3_file.py  test_parquet_to_sql_transformation.py
src/: db_credentials.py  function.py  ingestion.py  json_converter_function.py  pg8000_conn.py  rows_to_json.py
src/ingestion/: get_timestamp.py  ingestion.py  rows_to_json.py  write_JSON.py
src/ingestion_function/: write_JSON.py
src/json_to_parquet/: date_dimension.py  dim_counterparty.py  dim_currency.py  dim_staff.py  example.py  get_s3_file.py  json_to_parquet.py  transformations.py  write_pq_to_s3.py
src/parquet_to_olap/: get_parquet_s3_file.py  parquet_to_olap.py  parquet_to_sql_transformation.py
src/utils/: custom_log.py  manifest.py  pg8000_conn.py
terraform/: alerts.tf  cloudwatch.tf  data.tf  event_bridge.tf  iam.tf  lambda.tf  provider.tf  response.json  s3.tf  secret.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf
test/: conftest.py  test_db_credentials.py  test_function.py  test_json_converter_function.py  test_pg8000_conn.py  test_rows_to_json.py  test_write_to_ingestion.py
test/_fake_events/: par2olap_handler_event.json  (+2 more)
(+43 files in other folders)
