[project]
authors = [
    { name = "Ethel" },
    { name = "James Bennett" },
    { name = "Mohammad" },
    { name = "Nafisa Satti" },
    { name = "Ronan Tiller-Cordy" },
    { name = "Samuel Massey", email = "s.massey@protonmail.com" },
]
name = "totesys_data_ingestion"
version = "0.1"
description = "Retrieves data from Postgres RDBMS to store in S3 Buckets"
requires-python = ">=3.10"
dependencies = ["boto3", "botocore"]

[project.optional-dependencies]
dev = ["autopep8", "bandit", "flake8", "moto", "safety", "pg8000", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["ingestion"]
